# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

  02 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    Added option dhcp_release to specify if we release the DHCP lease or not
    defaults to no
    Changed variables peer_* to dhcp_*
    dhclient and udhcpc now specify a pidfile
    Fixed iwconfig report if iwgetid does not support --channel

  01 Dec 2004; Mike Frysinger <vapier@gentoo.org>:

    Refix and clean up the netmount script to kill processes #64034.

  01 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    Documentation fixes regarding iwconfig and linux-wlan-ng
    Fixed bonding deps per bug #71419

  30 Nov 2004; Mike Frysinger <vapier@gentoo.org>:

    Fix the UML/coLinux check in init.d/clock #72937.

    Allow the user to override the default mount options via /etc/fstab 
    for all the mounts.  Added a 'is_in_fstab' function to see if the 
    user has defined the mount, and if not, fall back to the hardcoded 
    stuff from before.  This also lets us get rid of $RC_DEVICE_FS #70044.

  26 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    Fixed up address detection in apipa
    net.lo now checks for duplicate static IPv4 addresses before assigning
    iwconfig now supports preassociate and postassociate user hooks
    net.example - changed $1 to ${IFACE} in examples
    clarified lack of linux-wlan-ng support

  24 Nov 2004; Mike Frysinger <vapier@gentoo.org>:

    Allow users to specify charset option to dumpkeys when using unicode 
    in conf.d/keymaps #72225.  Also move all the init.d/keymap specific 
    options out of rc.conf and into conf.d/keymaps and add some config 
    checks to init.d/keymaps like the clock/hostname init.d scripts.

    Make sure /etc/rc.conf overrides conf.d files when starting up 
    critical services.  Should help out with transition from rc.conf.

  24 Nov 2004; Roy Marples <uberlord@gentoo.org>:
